Wed Aug  6 19:09:00 2003  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * performance-tests/Latency/Collocation/Client_Task.h:
        * performance-tests/Latency/Collocation/Client_Task.cpp:
        * performance-tests/Latency/Collocation/Server_Task.h:
        * performance-tests/Latency/Collocation/Client_Task.cpp:
        * performance-tests/Latency/Collocation/Collocated_Test.cpp:
        * performance-tests/Latency/Collocation/Test.idl:
        * performance-tests/Latency/Collocation/Roundtrip.h:
        * performance-tests/Latency/Collocation/Roundtrip.cpp:
        * performance-tests/Latency/Collocation/run_test.pl:
        * performance-tests/Latency/Collocation/README:
        * performance-tests/Latency/Collocation/Makefile:
        * performance-tests/Latency/Collocation/svc.conf:
          Simple test to measure round-trip latency when client and server
          are collocated. Both client and server are single-threaded.
          Collocation strategy used for testing is the "Thru_POA".

Thu Aug  7 00:12:50 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * orbsvcs/LoadBalancer/Signal_Handler.cpp:
          Added #include Reactor.h required by recent subsetting.

Wed Aug  6 20:44:51 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * examples/Event_Comm/Event_Comm_i.h:
          Added #include Reactor.h.

        * examples/Logging/Logger_i.h:
        * examples/POA/DSI/server.cpp:
        * examples/POA/Default_Servant/client.cpp:
        * examples/POA/Default_Servant/server.cpp:
        * examples/POA/Explicit_Activation/server.cpp:
        * examples/POA/Loader/Servant_Locator.h:
        * examples/POA/NewPOA/NewPOA.cpp:
        * examples/POA/On_Demand_Activation/server.cpp.
        * examples/POA/TIE/server.cpp:
        * examples/PluggableUDP/tests/Basic/UDP_Client_i.cpp:
        * examples/PluggableUDP/tests/Performance/UDP_PerformanceClient.cpp:
        * examples/RTCORBA/Activity/Job_i.h: